// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EmptyScreen] MyCash Should render EmptyScreen for alert 1`] = `
<div>
  <div
    class="NoResultsWrapper"
    data-testid="mycash-empty-screen"
  >
    <div>
      <img
        alt="keine Alerts"
        class="Image"
        src="SvgrURL"
      />
    </div>
    <div>
      <p
        class="NoResultsTitle"
      >
        Erstellen Sie Ihren ersten Kurs-Alert
      </p>
      <p
        class="NoResultsDescription"
      >
        Wenn der Preis, den von Ihnen gesetzten Zielpreis erreicht,
    erhalten Sie einmalig eine Benachrichtigung. Der Versand
    erfolgt per E-Mail. Mit einem Börsenabo profitieren Sie von
    kostenlosen SMS-Alerts. Den Alert-Button finden Sie auf den
    Fullquote-Seiten und im Portfolio und den Watchlists.
      </p>
      <button
        aria-label="Alert setzen"
        class="Primary"
        tabindex="-1"
        type="button"
      >
        <span>
          Alert setzen
        </span>
      </button>
    </div>
  </div>
  ,
</div>
`;

exports[`[EmptyScreen] MyCash Should render EmptyScreen for portfolio 1`] = `
<div>
  <div
    class="NoResultsWrapper"
    data-testid="mycash-empty-screen"
  >
    <div>
      <img
        alt="keine portfolios"
        class="Image"
        src="SvgrURL"
      />
    </div>
    <div>
      <p
        class="NoResultsTitle"
      >
        Erstellen Sie Ihr erstes Portfolio
      </p>
      <p
        class="NoResultsDescription"
      >
        Das Erstellen eines Portfolios ist der einfachste Weg, über die von
    Ihnen verfolgten Aktien auf dem Laufenden zu bleiben. Das Beste ist,
    es ist kostenlos.
      </p>
      <button
        aria-label="Portfolio anlegen"
        class="Primary"
        tabindex="-1"
        type="button"
      >
        <span>
          Portfolio anlegen
        </span>
      </button>
    </div>
  </div>
  ,
</div>
`;

exports[`[EmptyScreen] MyCash Should render EmptyScreen for watchlist 1`] = `
<div>
  <div
    class="NoResultsWrapper"
    data-testid="mycash-empty-screen"
  >
    <div>
      <img
        alt="keine watchlist"
        class="Image"
        src="SvgrURL"
      />
    </div>
    <div>
      <p
        class="NoResultsTitle"
      >
        Erstellen Sie Ihre erste Watchlist
      </p>
      <p
        class="NoResultsDescription"
      >
        Behalten Sie Ihre Lieblingsaktien im Blick! Verwenden Sie
    Watchlisten, um den Überblick über Ihre Investitionen zu
    behalten und informierte Entscheidungen zu treffen. Starten
    Sie jetzt und legen Sie los!
      </p>
      <button
        aria-label="Watchlist anlegen"
        class="Primary"
        tabindex="-1"
        type="button"
      >
        <span>
          Watchlist anlegen
        </span>
      </button>
    </div>
  </div>
  ,
</div>
`;
